# nexus

./: Cargo.toml  README.md  docker-compose.yml  test_api.rest
cursor/: Cargo.toml
cursor/src/: filters.rs  handler.rs  jwt.rs  routes.rs  tls.rs
cursor/src/db/: db_queries.rs  models_wrapper.rs
cursor/src/errors/: db.rs  jwt.rs
cursor/src/filters/: auth.rs  users.rs
cursor/src/handlers/: auth.rs  users.rs
cursor/src/ops/: audio_call.rs  message.rs
cursorcli/: .gitignore  Cargo.toml
cursorcli/src/: main.rs
cursorcli/src/ops/: call.rs  register.rs  send_message.rs  start_session.rs  user.rs
cursorlib/: Cargo.toml  README.md
cursorlib/src/: models.rs  utils.rs
cursorlib/src/models/: command.rs
cursorlib/src/models/message/: msg_type.rs
cursorlib/src/models/user/: role.rs
cursorlib/src/request/: auth.rs  message.rs
litera/: Cargo.toml
litera/src/: main.rs  ops.rs
litera/src/ops/: call.rs  register.rs  send_message.rs  start_session.rs  user.rs
nexus/: Cargo.toml  README.md  docker-compose.yml  test_api.rest
nexus/scripts/: generate_tls_keys.bash
nexus/src/: api.rs  db.rs  errors.rs  handler.rs  jwt.rs  main.rs  ops.rs  storage.rs  stream.rs  tls.rs
nexus/src/api/: filters.rs  jwt.rs  routes.rs
nexus/src/api/filters/: auth.rs  users.rs
nexus/src/api/handlers/: auth.rs  users.rs
nexus/src/db/: database.rs  db_queries.rs  models_wrapper.rs
nexus/src/errors/: jwt.rs
nexus/src/handlers/: auth.rs  users.rs
nexus/src/ops/: audio_call.rs  call.rs  file.rs  message.rs
nexus/src/state/: connection.rs  peer.rs
nexus/src/stream/: tcp.rs  tcp_handler.rs  udp.rs  udp_handler.rs
nexuscli/: Cargo.toml
nexuscli/src/: main.rs
nexuscli/src/ops/: register.rs  send_message.rs  start_session.rs  user.rs
nexuslib/: Cargo.toml  README.md
nexuslib/src/: lib.rs  models.rs  request.rs  utils.rs
nexuslib/src/errors/: stream.rs
nexuslib/src/models/: call.rs  calls.rs  command.rs  file.rs  message.rs  user.rs
nexuslib/src/models/call/: call_type.rs  media_call.rs
nexuslib/src/models/calls/: audio_call.rs
nexuslib/src/models/file/: media_file.rs
nexuslib/src/models/message/: file.rs  media.rs  message.rs  msg_type.rs  status.rs  text.rs  type.rs
nexuslib/src/models/user/: session.rs  user.rs
nexuslib/src/request/: call.rs  file.rs  index_token.rs  message.rs  sides.rs
nexuslib/src/response/: auth.rs
orbis/: Cargo.toml  README.md
orbis/src/: lib.rs  request.rs  response.rs
orbis/src/crypto/: hasher.rs
orbis/src/models/: message.rs  user.rs
orbis/src/models/calls/: audio_call.rs
orbis/src/models/message/: file.rs  status.rs  text.rs
orbis/src/models/user/: settings.rs
orbis/src/request/: sides.rs
src/: db.rs  errors.rs  filters.rs  handler.rs  jwt.rs  main.rs  ops.rs  routes.rs
src/db/: database.rs  db_queries.rs
src/errors/: db.rs
src/filters/: auth.rs  users.rs
src/handlers/: auth.rs  users.rs
src/ops/: audio_call.rs  message.rs
src/state/: connection.rs  peer.rs
