[package]
name = "cursor"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa"]
readme = "README.md"

[dependencies]
# core library
orbis = { path = "../orbis" }

# async
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
futures = "0.3.25"

# web
warp = { version = "0.3.3", features = ["tokio-rustls", "tls"] }

# DB
scylla = "0.9.0"

# crypto
sha3 = "0.10.6"
rand_core = "0.5.1"
x25519-dalek = "2.0.0"
ed25519-dalek = "2.0.0"
jsonwebtoken = "8.2.0"

# serde
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# utils
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.48"
ctrlc = "3.4.1"
hashbrown = { version = "0.14.0", features = ["serde"] }
