[workspace]

members = ["nexus", "nexuslib", "nexuscli"]
resolver = "2"

[workspace.dependencies]

# core library
nexuslib = { path = "nexuslib" }

# utils
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

# async
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-rustls = "0.23.4"
futures = "0.3.30"

# crypto
hex = "0.4.3"
sha3 = "0.10.8"
aes-gcm = "0.10.3"
ed25519-dalek = "2.1.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }

# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"
