[package]
name = "nexuscli"
version = "0.1.0"
edition = "2021"

[dependencies]
# core
nexuslib = { path = "../nexuslib" }

# async
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-rustls = "0.23.4"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
futures = "0.3.25"

# crypto
hex = "0.4.3"
sha3 = "0.10.6"
aes-gcm = "0.10.1"
x25519-dalek = { version = "1.2.0", features = ["reusable_secrets"] }

# serialization
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
bincode = "1.3.3"

# utils
rand_core = "0.5.1"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
log = "0.4.8"
env_logger = "0.10.0"
rpassword = "7.2.0"
sysinfo = "0.27.7"
ansi_term = "0.12.1"
