[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa"]
readme = "README.md"

[dependencies]
# core library
nexuslib = { path = "../nexuslib" }

# async
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
futures = "0.3.25"

# http server & DB
warp = { version = "0.3.3", features = ["tokio-rustls", "tls"] }
scylla = "0.7.0"

# crypto
sha3 = "0.10.6"
rand_core = "0.5.1"
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
jsonwebtoken = "8.2.0"

# serde
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"

# utils
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.8"
env_logger = "0.10.0"
thiserror = "1.0.38"
ctrlc = "3.2.4"
hashbrown = { version = "0.13.2", features = ["serde"] }
crossterm = "0.27.0"
