[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa"]
readme = "README.md"

[dependencies]
# core library
nexuslib = { workspace = true }

# utils
uuid = { workspace = true }
chrono = { workspace = true }
log = "0.4.8"
env_logger = "0.10.0"
dotenv = "0.15.0"
thiserror = "1.0.38"
ctrlc = "3.2.4"
hashbrown = { version = "0.13.2", features = ["serde"] }

# UI
crossterm = "0.27.0"

# async
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
rustls-pemfile = "1.0.1"

# http server & DB
warp = { version = "0.3.3", features = ["tokio-rustls", "tls"] }
scylla = "0.7.0"

# crypto
jsonwebtoken = "8.2.0"
sha3 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
