[package]
name = "nexuscli"
version = "0.1.0"
edition = "2021"

[dependencies]
# core
nexuslib = { workspace = true }

# utils
uuid = { workspace = true }
rand_core = { workspace = true }
log = "0.4.8"
env_logger = "0.10.0"
sysinfo = "0.27.7"

# UI
ansi_term = "0.12.1"
rpassword = "7.2.0"

# async
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }

# crypto
hex = { workspace = true }
sha3 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
