[package]
name = "nexuslib"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# utils
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand_core = "0.5.1"

# crypto
hex = "0.4.3"
sha3 = "0.10.6"
aes-gcm = "0.10.1"
x25519-dalek = { version = "1.2.0", features = ["reusable_secrets"] }

# serde
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.10"
serde_with = { version = "2.1.0" }
bincode = "1.3.3"                                      # struct to bytes and vice versa
