[package]
name = "nexuslib"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# utils
uuid = { workspace = true }
chrono = { workspace = true }

# crypto
hex = { workspace = true }
sha3 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "2.1.0" }
serde_repr = "0.1.10"
bincode = { workspace = true }     # struct to bytes and vice versa
